loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:2: error: '<-' expected but ')' found.
for (i -< 1 to 4) {
                ^LoopStairs:10: error: illegal start of simple expression
	}
        ^