loopfor.LoopStairs.scala.code
avance(3)
for (i -< 1 to 4) {
  gauche()
  avance()
  droite()
  avance()
}
avance(3)